--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,1 @@
-<p>Bienvenidos a la aplicacion de prueba de Intercorp</p>
+<span class="mat-display-3">Bienvenidos a la aplicación Reto Intercorp</span>
