--- a/src/app/customer/components/customer-management/customer-management.component.html
+++ b/src/app/customer/components/customer-management/customer-management.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
     <div>
-        <span class="mat-display-1">Proyección y Análisis de Clientes</span>
+        <span class="mat-display-1">Listado de Clientes</span>
     </div>
     <div>
         <button class="mat-raised-button mat-primary" (click)="addNewCustomer()">Nuevo</button>
